syntax = "proto3";

package calendar.v1;
option go_package = "github.com/asynccnu/ccnubox-be/be-api/gen/proto/calendar/v1;calendarv1";

//import "google/protobuf/any.proto";

service CalendarService {
  rpc GetCalendar(GetCalendarRequest)returns(GetCalendarResponse);
  rpc SaveCalendar(SaveCalendarRequest)returns(SaveCalendarResponse);
  rpc DelCalendar(DelCalendarRequest)returns(DelCalendarResponse);
}

message CalendarRequest {
  string link =1;
  int64 year =2;
}

message CalendarResponse {
  string link =1;
  int64 year =2;
}

message GetCalendarRequest {
  int64 year =1;
}

message GetCalendarResponse {
  string link =1;
  int64 year =2;
}

message SaveCalendarRequest {
  CalendarRequest calendar = 1;
}

message SaveCalendarResponse {}

message DelCalendarRequest {
  int64 year =1;
}

message DelCalendarResponse {}
