syntax = "proto3";

package calendar.v1;
import "errors/errors.proto";

option go_package = "github.com/asynccnu/ccnubox-be/be-api/gen/proto/calendar/v1;calendarv1";

enum CalendarErrorReason {
  // 设置缺省错误码
  option (errors.default_code) = 500;

  GET_CALENDAR_ERROR = 0 [(errors.code) = 501];
  DEL_CALENDAR_ERROR = 1 [(errors.code) = 502];
  SAVE_CALENDAR_ERROR = 2 [(errors.code) = 503];
}
